Rename to normalize-js-code
Apparently it was too close to normalize.js, which exists already

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "normalize-js",
+  "name": "normalize-js-code",
   "version": "1.0.0",
   "description": "Normalize javascript code to remove randomness introduced by bundling",
   "main": "dist/index.js",
