--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -1,6 +1,8 @@
 on:
     push:
         branches: main
+        paths:
+          - lib
     workflow_dispatch:
   
 jobs:
@@ -15,4 +17,5 @@ jobs:
         - run: bun run build
         - uses: JS-DevTools/npm-publish@v3
           with:
+            package: lib
             token: ${{ secrets.NPM_TOKEN }}
