--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - site
   workflow_dispatch:
 
 # Allow this job to clone the repo and create a page deployment
