--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -2,10 +2,8 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    branches:
-      - main
-    paths:
-      - site
+    branches: ['main']
+    paths: ['site']
   workflow_dispatch:
 
 # Allow this job to clone the repo and create a page deployment
