--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -18,6 +18,11 @@ jobs:
     steps:
       - name: Checkout your repository using git
         uses: actions/checkout@v4
+      - uses: oven-sh/setup-bun@v2
+        with:
+          bun-version: latest
+      - run: bun i --frozen-lockfile
+      - run: bun run build
       - name: Install, build, and upload your site
         uses: withastro/action@v3
         with:
