--- a/.github/workflows/site.yml
+++ b/.github/workflows/site.yml
@@ -3,7 +3,7 @@ name: Deploy to GitHub Pages
 on:
   push:
     branches: ['main']
-    paths: ['site']
+    paths: ['site/**']
   workflow_dispatch:
 
 # Allow this job to clone the repo and create a page deployment
