--- a/site/package.json
+++ b/site/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/svelte": "^7.0.13",
+    "@lucide/svelte": "^0.511.0",
     "@tailwindcss/vite": "^4.1.5",
     "astro": "^5.7.12",
     "normalize-js-code": "workspace:*",
