--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -9,6 +9,9 @@ on:
 jobs:
   publish:
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      id-token: write
     steps:
       - uses: actions/checkout@v4
       - uses: oven-sh/setup-bun@v2
@@ -16,7 +19,6 @@ jobs:
           bun-version: latest
       - run: bun i --frozen-lockfile
       - run: bun run build
-      - uses: JS-DevTools/npm-publish@v3
+      - uses: JS-DevTools/npm-publish@v4
         with:
           package: lib
-          token: ${{ secrets.NPM_TOKEN }}
