--- a/lib/package.json
+++ b/lib/package.json
@@ -12,7 +12,7 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/TheLazySquid/normalize-js-code"  
+    "url": "git+https://github.com/TheLazySquid/normalize-js-code.git"  
   },
   "devDependencies": {
     "@types/bun": "latest",
