Fix workflow for real

--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -19,6 +19,9 @@ jobs:
           bun-version: latest
       - run: bun i --frozen-lockfile
       - run: bun run build
+      - uses: actions/setup-node@v4
+        with:
+          node-version: latest
       - uses: JS-DevTools/npm-publish@v4
         with:
           package: lib
