--- a/.github/workflows/npm.yml
+++ b/.github/workflows/npm.yml
@@ -19,6 +19,7 @@ jobs:
           bun-version: latest
       - run: bun i --frozen-lockfile
       - run: bun run build
+      - run: cp README.md lib/README.md
       - uses: actions/setup-node@v4
         with:
           node-version: latest
